--- a/CSharpFundamentals/CSharpFundamentals.csproj
+++ b/CSharpFundamentals/CSharpFundamentals.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Examples_MoshMohedani.cs" />
     <Compile Include="Exercises.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Section5Exercise1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
